Fixed the nav bar display on smaller screens

--- a/src/components/style/RespNavBar.css
+++ b/src/components/style/RespNavBar.css
@@ -22,26 +22,6 @@
     box-shadow: inset 0 0 0 3px #414141;
   }
   
-  /*.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-
-  .topnav a:hover {
-    background: #252525;
-    color: #fff7f7;
-  }
-  
-  .topnav a.active {
-    background: #4CAF50;
-    color: #fff7f7;
-  }*/
-  
   .topnav .icon {
     display: none;
   }
@@ -49,21 +29,28 @@
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
-      float: right;
-      display: block;
+      /*float: right;
+      display: block;*/
+      display: none;
     }
   }
   
   @media screen and (max-width: 600px) {
+    .topnav {
+      padding: 0%;
+    }
+
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
-      position: absolute;
+      /*position: absolute;
       right: 0;
-      top: 0;
+      top: 0;*/
+      display: none;
     }
     .topnav.responsive a {
       float: none;
-      display: block;
+      display: inline;
       text-align: left;
+      padding: 5px;
     }
   }
